fix(release): unify build  (#2026)
## Describe your changes

> [!NOTE]
> This is a proposal

Each package has its own slightly different `npm run build` command. It
is confusing and actually redundant with the global build command
(except for the CLI but hopefully we will be able to remove that at some
point). And we will add more packages so we want a something simple that
works

- Proposing to reduce to one command  `npm run ts-build`
- Remove unnecessary commands

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
         "prettier-watch": "onchange './**/*.{ts,tsx}' -- prettier --write {{changed}}",
         "lint": "eslint . --ext .ts,.tsx",
         "lint:fix": "eslint . --ext .ts,.tsx --fix",
-        "ts-build": "tsc -b tsconfig.build.json && npm run postbuild -ws --if-present",
+        "ts-build": "tsc -b tsconfig.build.json && npm run -w nango postbuild",
         "ts-build:docker": "tsc -b tsconfig.docker.json",
         "ts-clean": "npx rimraf packages/*/tsconfig.tsbuildinfo packages/*/dist",
         "docker-build": "docker build -f packages/server/Dockerfile -t nango-server:latest .",
@@ -33,7 +33,6 @@
         "webapp-build:enterprise": "cd ./packages/webapp && npm run build:enterprise && cd ../..",
         "webapp-build:watch": "tsc -b -w packages/webapp/tsconfig.json",
         "docker-build:unified": "./scripts/build_docker.sh",
-        "shared:build": "cd ./packages/shared && npm run build && cd ../..",
         "build:hosted": "npm ci && npm run ts-build && npm run webapp-build:hosted",
         "build:staging": "npm ci && npm run ts-build && npm run webapp-build:staging",
         "build:prod": "npm ci && npm run ts-build && npm run webapp-build:prod",
