--- a/.github/workflows/integration-flows.yaml
+++ b/.github/workflows/integration-flows.yaml
@@ -29,7 +29,8 @@ jobs:
               run: |
                   # Build, install CLI and verify it can run
                   npm ci
-                  npm run build -w @nangohq/node -w @nangohq/utils -w @nangohq/records -w @nangohq/shared -w nango
+                  npm run ts-build
+                  npm run -w nango postbuild
                   npm install -g ./packages/cli
                   NANGO_CLI_UPGRADE_MODE=ignore nango version --debug
 
