--- a/.env.example
+++ b/.env.example
@@ -71,9 +71,9 @@ DEFAULT_GITHUB_CLIENT_ID=
 DEFAULT_GITHUB_CLIENT_SECRET=
 
 # ----- Logs
-NANGO_LOGS_ES_URL="http://localhost:9500"
-NANGO_LOGS_ES_USER=""
-NANGO_LOGS_ES_PWD=""
+NANGO_LOGS_OS_URL="http://localhost:9500"
+NANGO_LOGS_OS_USER=""
+NANGO_LOGS_OS_PWD=""
 
 # Hosted Auth Configuration
 WORKOS_API_KEY=
