--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -35,7 +35,7 @@ services:
             - LOG_LEVEL=${LOG_LEVEL:-info}
             - TELEMETRY=${TELEMETRY}
             - NANGO_SERVER_WEBSOCKETS_PATH=${NANGO_SERVER_WEBSOCKETS_PATH}
-            - NANGO_LOGS_ES_URL=${NANGO_LOGS_ES_URL:-http://localhost:9500}
+            - NANGO_LOGS_OS_URL=${NANGO_LOGS_OS_URL:-http://localhost:9500}
         volumes:
             - './packages/shared/providers.yaml:/usr/nango-server/src/packages/shared/providers.yaml'
         restart: always
@@ -43,7 +43,7 @@ services:
             - '${SERVER_PORT:-3003}:${SERVER_PORT:-3003}'
         depends_on:
             - nango-db
-            - nanog-es
+            - nanog-opensearch
         networks:
             - nango
 
@@ -55,20 +55,20 @@ services:
         networks:
             - nango
 
-    nanog-es:
-        image: elasticsearch:8.12.2
+    nanog-opensearch:
+        image: opensearchproject/opensearch:2.13.0
         ulimits:
             memlock:
                 soft: -1
                 hard: -1
         volumes:
-            - esdata1:/usr/share/elasticsearch/data
+            - opensearch-data1:/usr/share/opensearch/data
         ports:
             - 9500:9500
             - 9600:9300
         environment:
             - discovery.type=single-node
-            - xpack.security.enabled=false
+            - plugins.security.disabled=true
         networks:
             - nango
 
@@ -76,5 +76,5 @@ networks:
     nango:
 
 volumes:
-    esdata1:
+    opensearch-data1:
         driver: local
