--- a/packages/jobs/tsconfig.json
+++ b/packages/jobs/tsconfig.json
@@ -6,6 +6,9 @@
     },
     "references": [
         {
+            "path": "../logs"
+        },
+        {
             "path": "../shared"
         },
         {
