--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -7,7 +7,8 @@
     "typings": "dist/index.d.ts",
     "scripts": {},
     "bundleDependencies": [
-        "@nangohq/utils"
+        "@nangohq/utils",
+        "@nangohq/logs"
     ],
     "keywords": [],
     "repository": {
@@ -62,6 +63,7 @@
         "npm": ">=6.14.11"
     },
     "devDependencies": {
+        "@nangohq/logs": "file:../logs",
         "@nangohq/records": "file:../records",
         "@octokit/types": "^9.2.1",
         "@types/amqplib": "^0.8.2",
