--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,7 +27,7 @@ services:
             - NANGO_DB_SSL=${NANGO_DB_SSL}
             - NANGO_DB_POOL_MIN=${NANGO_DB_POOL_MIN}
             - NANGO_DB_POOL_MAX=${NANGO_DB_POOL_MAX}
-            - RECORDS_DATABASE_URL=${RECORDS_DATABASE_URL}
+            - RECORDS_DATABASE_URL=${RECORDS_DATABASE_URL:-postgresql://nango:nango@nango-db:5432/nango}
             - SERVER_PORT=${SERVER_PORT}
             - NANGO_SERVER_URL=${NANGO_SERVER_URL:-http://localhost:3003}
             - NANGO_DASHBOARD_USERNAME=${NANGO_DASHBOARD_USERNAME}
@@ -35,7 +35,9 @@ services:
             - LOG_LEVEL=${LOG_LEVEL:-info}
             - TELEMETRY=${TELEMETRY}
             - NANGO_SERVER_WEBSOCKETS_PATH=${NANGO_SERVER_WEBSOCKETS_PATH}
-            - NANGO_LOGS_OS_URL=${NANGO_LOGS_OS_URL:-http://localhost:9500}
+            - NANGO_LOGS_OS_URL=${NANGO_LOGS_OS_URL:-http://nango-opensearch:9200}
+            - NANGO_LOGS_OS_USER=${NANGO_LOGS_OS_USER}
+            - NANGO_LOGS_OS_PWD=${NANGO_LOGS_OS_PWD}
         volumes:
             - './packages/shared/providers.yaml:/usr/nango-server/src/packages/shared/providers.yaml'
         restart: always
@@ -57,6 +59,7 @@ services:
 
     nanog-opensearch:
         image: opensearchproject/opensearch:2.13.0
+        container_name: nango-opensearch
         ulimits:
             memlock:
                 soft: -1
@@ -64,11 +67,11 @@ services:
         volumes:
             - opensearch-data1:/usr/share/opensearch/data
         ports:
-            - 9500:9500
+            - 9500:9200
             - 9600:9300
         environment:
             - discovery.type=single-node
-            - plugins.security.disabled=true
+            - DISABLE_SECURITY_PLUGIN=true
         networks:
             - nango
 
