--- a/packages/cli/docker/docker-compose.yaml
+++ b/packages/cli/docker/docker-compose.yaml
@@ -36,13 +36,16 @@ services:
             - LOG_LEVEL=${LOG_LEVEL:-info}
             - TELEMETRY=${TELEMETRY}
             - NANGO_SERVER_WEBSOCKETS_PATH=${NANGO_SERVER_WEBSOCKETS_PATH}
-            - NANGO_LOGS_OS_URL=${NANGO_LOGS_OS_URL:-http://localhost:9500}
             - RECORDS_DATABASE_URL=${RECORDS_DATABASE_URL:-postgresql://nango:nango@nango-db:5432/nango}
+            - NANGO_LOGS_OS_URL=${NANGO_LOGS_OS_URL:-http://nango-opensearch:9200}
+            - NANGO_LOGS_OS_USER=${NANGO_LOGS_OS_USER}
+            - NANGO_LOGS_OS_PWD=${NANGO_LOGS_OS_PWD}
         restart: always
         ports:
             - '${NANGO_PORT:-3003}:${NANGO_PORT:-3003}'
         depends_on:
             - nango-db
+            - nango-opensearch
         volumes:
             - '${NANGO_INTEGRATIONS_LOCATION:-./}:/usr/nango-server/src/packages/shared/dist/nango-integrations'
         networks:
@@ -63,9 +66,13 @@ services:
             - NANGO_DB_NAME=${NANGO_DB_NAME}
             - NANGO_DB_SSL=${NANGO_DB_SSL}
             - RECORDS_DATABASE_URL=${RECORDS_DATABASE_URL:-postgresql://nango:nango@nango-db:5432/nango}
+            - NANGO_LOGS_OS_URL=${NANGO_LOGS_OS_URL:-http://nango-opensearch:9200}
+            - NANGO_LOGS_OS_USER=${NANGO_LOGS_OS_USER}
+            - NANGO_LOGS_OS_PWD=${NANGO_LOGS_OS_PWD}
         depends_on:
             - nango-db
             - temporal
+            - nango-opensearch
         volumes:
             - '${NANGO_INTEGRATIONS_LOCATION:-./}:/usr/nango-jobs/src/packages/shared/dist/nango-integrations'
         networks:
@@ -85,8 +92,12 @@ services:
             - NANGO_DB_NAME=${NANGO_DB_NAME}
             - NANGO_DB_SSL=${NANGO_DB_SSL}
             - RECORDS_DATABASE_URL=${RECORDS_DATABASE_URL:-postgresql://nango:nango@nango-db:5432/nango}
+            - NANGO_LOGS_OS_URL=${NANGO_LOGS_OS_URL:-http://nango-opensearch:9200}
+            - NANGO_LOGS_OS_USER=${NANGO_LOGS_OS_USER}
+            - NANGO_LOGS_OS_PWD=${NANGO_LOGS_OS_PWD}
         depends_on:
             - nango-db
+            - nango-opensearch
         networks:
             - nango
 
@@ -107,8 +118,9 @@ services:
         networks:
             - nango
 
-    nanog-opensearch:
+    nango-opensearch:
         image: opensearchproject/opensearch:2.13.0
+        container_name: nango-opensearch
         ulimits:
             memlock:
                 soft: -1
@@ -116,11 +128,11 @@ services:
         volumes:
             - opensearch-data1:/usr/share/opensearch/data
         ports:
-            - 9500:9500
+            - 9500:9200
             - 9600:9300
         environment:
             - discovery.type=single-node
-            - plugins.security.disabled=true
+            - DISABLE_SECURITY_PLUGIN=true
         networks:
             - nango
 
