--- a/packages/shared/flows.yaml
+++ b/packages/shared/flows.yaml
@@ -420,6 +420,14 @@ integrations:
                 title: string
                 name: string
     expensify:
+        actions:
+            expensify-list-policy:
+                description: >
+                    Action to fetch a list of policies with some relevant information
+                    about them
+                endpoint: POST /expensify/list-policy
+                input: ExpensifyListPolicyInput
+                output: ExpensifyListPolicyOutput
         models:
             ExpensifyListPolicyInput:
                 requestJobDescription: RequestJobDescription
