feat(integrations): add support for egnyte api (#2044)
## Describe your changes

- Added configuration for egnyte in providers.yaml
- Added egnyte to docs-v2.
- Added egnyte pages for Supported API groups in mint.json.
- Added egnyte SVG file in template-logos folder.
- Consolidate egnyte docs pages

## Issue ticket number and link

[EXT-52](https://linear.app/nango/issue/EXT-52/add-support-for-egnyte-api)
## Test
This provider has been used successfully in local development to connect
to egnyte after authorizing using Nango.
The documentation update was reviewed using `npm run docs` and verifying
on localhost.

--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -558,6 +558,22 @@ dropbox:
     proxy:
         base_url: https://api.dropboxapi.com
     docs: https://docs.nango.dev/integrations/all/dropbox
+egnyte:
+    categories:
+        - storage
+    auth_mode: OAUTH2
+    authorization_url: https://${connectionConfig.subdomain}.egnyte.com/puboauth/token
+    token_url: https://${connectionConfig.subdomain}.egnyte.com/puboauth/token
+    scope_separator: ' '
+    authorization_params:
+        response_type: code
+    token_params:
+        grant_type: authorization_code
+    refresh_params:
+        grant_type: refresh_token
+    proxy:
+        base_url: https://${connectionConfig.subdomain}.egnyte.com/pubapi
+    docs: https://docs.nango.dev/integrations/all/egnyte
 entrata:
     categories:
         - other
