feat: types package

--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -12,6 +12,9 @@
             "path": "../node-client"
         },
         {
+            "path": "../types"
+        },
+        {
             "path": "../utils"
         },
         {
