--- a/packages/webapp/tsconfig.json
+++ b/packages/webapp/tsconfig.json
@@ -1,11 +1,7 @@
 {
     "compilerOptions": {
         "target": "ES5",
-        "lib": [
-            "DOM",
-            "DOM.Iterable",
-            "ESNext"
-        ],
+        "lib": ["DOM", "DOM.Iterable", "ESNext"],
         "allowJs": true,
         "skipLibCheck": true,
         "esModuleInterop": true,
@@ -21,7 +17,7 @@
         "resolveJsonModule": true,
         "isolatedModules": true,
         "noEmit": true,
-        "jsx": "react-jsx",
+        "jsx": "react-jsx"
     },
     "references": [
         {
@@ -29,9 +25,10 @@
         },
         {
             "path": "../server"
+        },
+        {
+            "path": "../types"
         }
     ],
-    "include": [
-        "src"
-    ]
+    "include": ["src"]
 }
