--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "packages/jobs",
         "packages/webapp",
         "packages/utils",
-        "packages/data-ingestion"
+        "packages/data-ingestion",
+        "packages/types"
     ],
     "scripts": {
         "create:migration": "cd packages/shared/lib/db && knex migrate:make $1 --esm --knexfile ./knexfile.cjs",
