--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -15,6 +15,9 @@
             "path": "../node-client"
         },
         {
+            "path": "../types"
+        },
+        {
             "path": "../utils"
         },
         {
