--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -64,6 +64,7 @@
     "devDependencies": {
         "@nangohq/logs": "file:../logs",
         "@nangohq/records": "file:../records",
+        "@nangohq/types": "1.0.0",
         "@octokit/types": "^9.2.1",
         "@types/amqplib": "^0.8.2",
         "@types/cors": "^2.8.12",
