--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@nangohq/types",
     "version": "1.0.0",
-    "description": "Types for use in Nango applications",
+    "description": "Types used in Nango applications",
     "type": "module",
     "typings": "dist/index.d.ts",
     "scripts": {},
