--- a/packages/persist/package.json
+++ b/packages/persist/package.json
@@ -5,6 +5,7 @@
     "type": "module",
     "main": "dist/app.js",
     "typings": "dist/index.d.ts",
+    "private": true,
     "scripts": {
         "start": "node dist/app.js",
         "dev": "nodemon"
@@ -18,7 +19,7 @@
     "license": "SEE LICENSE IN LICENSE FILE IN GIT REPOSITORY",
     "dependencies": {
         "@nangohq/logs": "file:../logs",
-        "@nangohq/shared": "^0.39.18",
+        "@nangohq/shared": "file:../shared",
         "@nangohq/utils": "file:../utils",
         "@nangohq/records": "file:../records",
         "dd-trace": "5.2.0",
