--- a/packages/jobs/package.json
+++ b/packages/jobs/package.json
@@ -17,7 +17,7 @@
     "dependencies": {
         "@nangohq/data-ingestion": "file:../data-ingestion",
         "@nangohq/logs": "file:../logs",
-        "@nangohq/nango-runner": "file:../shared",
+        "@nangohq/nango-runner": "file:../runner",
         "@nangohq/shared": "file:../shared",
         "@nangohq/utils": "file:../utils",
         "@nangohq/records": "file:../records",
