--- a/.github/workflows/cli-verification.yaml
+++ b/.github/workflows/cli-verification.yaml
@@ -53,6 +53,7 @@ jobs:
                   check_and_publish packages/node-client
                   check_and_publish packages/shared
                   check_and_publish packages/frontend
+                  check_and_publish packages/types
             - id: publish_step
               name: Publish npm packages to the github registry
               env:
