--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
         "testcontainers": "^9.12.0",
         "tsx": "^4.6.2",
         "typescript": "^5.3.3",
-        "vitest": "^1.5.2"
+        "vitest": "0.33.0"
     },
     "lint-staged": {
         "*.{js,jsx,ts,tsx,ejs,cjs}": [
