--- a/packages/runner/tsconfig.json
+++ b/packages/runner/tsconfig.json
@@ -4,6 +4,13 @@
         "rootDir": "lib",
         "outDir": "dist"
     },
-    "references": [{ "path": "../shared" }, { "path": "../utils" }],
+    "references": [
+        {
+            "path": "../shared"
+        },
+        {
+            "path": "../utils"
+        }
+    ],
     "include": ["lib/**/*"]
 }
