try to clean up after pack

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -22,7 +22,7 @@
         "@datadog/datadog-api-client": "^1.16.0",
         "@hapi/boom": "^10.0.1",
         "@nangohq/node": "^0.39.19",
-        "@nangohq/utils": "file:vendor/nangohq-utils-1.0.0.tgz",
+        "@nangohq/utils": "file:../utils",
         "@sentry/node": "^7.106.0",
         "@temporalio/client": "^1.9.1",
         "amqplib": "^0.10.3",
