--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -5,6 +5,7 @@
     "type": "module",
     "main": "dist/server.js",
     "typings": "dist/index.d.ts",
+    "private": true,
     "scripts": {
         "start": "tsc && node dist/server.js",
         "dev": "nodemon",
@@ -25,7 +26,7 @@
         "@hapi/boom": "^10.0.1",
         "@nangohq/logs": "file:../logs",
         "@nangohq/records": "file:../records",
-        "@nangohq/shared": "^0.39.19",
+        "@nangohq/shared": "file:../shared",
         "@nangohq/utils": "file:../utils",
         "@workos-inc/node": "^6.2.0",
         "axios": "^1.3.4",
