--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -7,8 +7,7 @@
     "typings": "dist/index.d.ts",
     "scripts": {},
     "bundleDependencies": [
-        "@nangohq/utils",
-        "@nangohq/logs"
+        "@nangohq/utils"
     ],
     "keywords": [],
     "repository": {
