--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -7,8 +7,7 @@
     "typings": "dist/index.d.ts",
     "scripts": {},
     "bundleDependencies": [
-        "@nangohq/utils",
-        "@nangohq/logs"
+        "@nangohq/utils"
     ],
     "keywords": [],
     "repository": {
@@ -64,6 +63,7 @@
     "devDependencies": {
         "@nangohq/logs": "file:../logs",
         "@nangohq/records": "file:../records",
+        "@nangohq/types": "0.39.18",
         "@octokit/types": "^9.2.1",
         "@types/amqplib": "^0.8.2",
         "@types/cors": "^2.8.12",
