--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -35,6 +35,7 @@
         "@mantine/prism": "5.10.5",
         "@nangohq/frontend": "^0.39.20",
         "@nangohq/server": "file:../server",
+        "@nangohq/types": "0.39.18",
         "@radix-ui/react-icons": "1.3.0",
         "@sentry/react": "7.83.0",
         "@tailwindcss/forms": "0.5.3",
