--- a/package.json
+++ b/package.json
@@ -60,8 +60,8 @@
     "devDependencies": {
         "@tsconfig/node18-strictest-esm": "^1.0.1",
         "@types/node": "20.12.2",
-        "@typescript-eslint/eslint-plugin": "6.21.0",
-        "@typescript-eslint/parser": "6.21.0",
+        "@typescript-eslint/eslint-plugin": "7.7.1",
+        "@typescript-eslint/parser": "7.7.1",
         "concurrently": "^8.0.1",
         "eslint": "8.56.0",
         "eslint-config-prettier": "9.1.0",
@@ -77,11 +77,7 @@
         "testcontainers": "^9.12.0",
         "tsx": "^4.6.2",
         "typescript": "^5.3.3",
-        "vitest": "^0.33.0"
-    },
-    "dependencies": {
-        "@babel/parser": "^7.22.5",
-        "@babel/traverse": "^7.22.5"
+        "vitest": "0.33.0"
     },
     "lint-staged": {
         "*.{js,jsx,ts,tsx,ejs,cjs}": [
