--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -487,6 +487,21 @@ deel-sandbox:
     proxy:
         base_url: https://api-staging.letsdeel.com
     docs: https://docs.nango.dev/integrations/all/deel
+dialpad:
+    categories:
+        - dev-tools
+    auth_mode: OAUTH2
+    authorization_url: https://dialpad.com/oauth2/authorize
+    token_url: https://dialpad.com/oauth2/token
+    authorization_params:
+        response_type: code
+    token_params:
+        grant_type: authorization_code
+    refresh_params:
+        grant_type: refresh_token
+    proxy:
+        base_url: https://dialpad.com
+    docs: https://docs.nango.dev/integrations/all/dialpad
 digitalocean:
     categories:
         - dev-tools
