--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -489,7 +489,7 @@ deel-sandbox:
     docs: https://docs.nango.dev/integrations/all/deel
 dialpad:
     categories:
-        - dev-tools
+        - communication
     auth_mode: OAUTH2
     authorization_url: https://dialpad.com/oauth2/authorize
     token_url: https://dialpad.com/oauth2/token
