--- a/packages/shared/flows.yaml
+++ b/packages/shared/flows.yaml
@@ -1391,6 +1391,107 @@ integrations:
                 relationships: object
                 links: object
     lever-basic:
+        actions:
+            create-note:
+                description: |
+                    Action to create a note and add it to a candidate profile in Lever
+                output: LeverOpportunityNote
+                input: LeverCreateNoteInput
+                endpoint: POST /lever/create-note
+                scopes:
+                    - notes:write:admin
+            create-opportunity:
+                description: |
+                    Action to create candidates and opportunities in Lever
+                output: LeverOpportunity
+                input: LeverCreateOpportunityInput
+                endpoint: POST /lever/create-opportunity
+                scopes:
+                    - opportunities:write:admin
+        syncs:
+            opportunities:
+                runs: every 6 hours
+                description: |
+                    Fetches a list of all pipeline opportunities for contacts in Lever
+                output: LeverOpportunity
+                sync_type: incremental
+                endpoint: /lever/opportunities
+                scopes:
+                    - opportunities:read:admin
+            opportunities-applications:
+                runs: every 6 hours
+                description: |
+                    Fetches a list of all applications for a candidate in Lever
+                output: LeverOpportunityApplication
+                sync_type: full
+                endpoint: /lever/opportunities-applications
+                scopes:
+                    - applications:read:admin
+            opportunities-feedbacks:
+                runs: every 6 hours
+                description: >
+                    Fetches a list of all feedback forms for a candidate for a specific
+                    Opportunity in lever
+                output: LeverOpportunityFeedback
+                sync_type: full
+                endpoint: /lever/opportunities-feedbacks
+                scopes:
+                    - feedback:read:admin
+            opportunities-interviews:
+                runs: every 6 hours
+                description: |
+                    Fetches a list of all interviewers for a specific Opportunity in lever
+                output: LeverOpportunityInterview
+                sync_type: full
+                endpoint: /lever/opportunities-interviews
+                scopes:
+                    - interviews:read:admin
+            opportunities-notes:
+                runs: every 6 hours
+                description: |
+                    Fetches a list of all notes for a specific candidate in lever
+                output: LeverOpportunityNote
+                sync_type: full
+                endpoint: /lever/opportunities-notes
+                scopes:
+                    - notes:read:admin
+            opportunities-offers:
+                runs: every 6 hours
+                description: |
+                    Fetches a list of all offers for a specific candidate in lever.
+                output: LeverOpportunityOffer
+                sync_type: full
+                endpoint: /lever/opportunities-offers
+                scopes:
+                    - offers:write:admin
+            postings:
+                runs: every 6 hours
+                description: |
+                    Fetches a list of all postings in Lever
+                output: LeverPosting
+                sync_type: full
+                endpoint: /lever/postings
+                scopes:
+                    - postings:read:admin
+            postings-apply:
+                runs: every 6 hours
+                description: >
+                    Fetches a list of all questions included in a posting’s application
+                    form in Lever
+                output: LeverPostingApply
+                sync_type: full
+                endpoint: /lever/postings-apply
+                scopes:
+                    - postings:read:admin
+            stage:
+                runs: every 6 hours
+                description: |
+                    Fetches a list of all pipeline stages in Lever
+                output: LeverStage
+                sync_type: full
+                endpoint: /lever/stage
+                scopes:
+                    - stages:read:admin
         models:
             LeverOpportunity:
                 id: string
