[nan-748] update command to upload

--- a/.github/workflows/integration-template-upload.yaml
+++ b/.github/workflows/integration-template-upload.yaml
@@ -47,6 +47,7 @@ jobs:
 
                     mkdir -p /tmp/nango-temp/nango-integrations
 
+                    cp $dir/nango.yaml /tmp/nango-temp/nango-integrations/
                     cp -r $dir/* /tmp/nango-temp/nango-integrations/
 
                     cd /tmp/nango-temp/nango-integrations
