--- a/packages/shared/flows.yaml
+++ b/packages/shared/flows.yaml
@@ -335,6 +335,7 @@ integrations:
                 description: |
                     Fetches a list of spaces from confluence
                 sync_type: full
+                scopes: read:space:confluence
                 endpoint: /confluence/spaces
             pages:
                 runs: every 4 hours
@@ -342,6 +343,7 @@ integrations:
                 description: |
                     Fetches a list of pages from confluence
                 sync_type: full
+                scopes: read:page:confluence
                 endpoint: /confluence/pages
         models:
             ConfluenceSpace:
