[nan-748] update command to upload (#2089)
## Describe your changes
Since syncs and actions are now nested we need to copy the root
nango.yaml directory and then also the files to the respective
integration

## Issue ticket number and link
NAN-748

## Checklist before requesting a review (skip if just adding/editing
APIs & templates)
- [ ] I added tests, otherwise the reason is: 
- [ ] I added observability, otherwise the reason is:
- [ ] I added analytics, otherwise the reason is:

--- a/.github/workflows/integration-template-upload.yaml
+++ b/.github/workflows/integration-template-upload.yaml
@@ -44,10 +44,12 @@ jobs:
 
                     dir=${dir//\/syncs/}
                     dir=${dir//\/actions/}
+                    integration=$(basename $dir)
 
                     mkdir -p /tmp/nango-temp/nango-integrations
 
-                    cp -r $dir/* /tmp/nango-temp/nango-integrations/
+                    cp $dir/nango.yaml /tmp/nango-temp/nango-integrations/
+                    cp -r $dir/* /tmp/nango-temp/nango-integrations/$integration/
 
                     cd /tmp/nango-temp/nango-integrations
                     nango compile
