--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -24,5 +24,5 @@
             "path": "../records"
         }
     ],
-    "include": ["lib/**/*", "../shared/lib/express.d.ts"]
+    "include": ["lib/**/*", "../shared/lib/express.d.ts", "../shared/lib/vitest.d.ts"]
 }
