Add Support for Microsoft Ads API (#1969)
## Describe your changes

- Added configuration for microsoft-ads in providers.yaml
- Added microsoft-ads to docs-v2.
- Added microsoft-ads pages for Pre-Configured APIs group in mint.json.
- Consolidate microsoft-ads docs pages

## Test

This provider has been used successfully in local development to connect
to Microsoft Ads and successfully call those endpoints after authorizing
using Nango.

The documentation update was reviewed using npm run docs and verifying
on localhost.

## Issue ticket number and link

Related to [this
thread](https://nango-community.slack.com/archives/C04ABR352H0/p1712349133436789)
in the Slack channel.

--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -1321,6 +1321,19 @@ microsoft-tenant-specific:
     refresh_params:
         grant_type: refresh_token
     docs: https://docs.nango.dev/integrations/all/microsoft-tenant-specific
+microsoft-ads:
+    alias: microsoft-teams
+    categories:
+        - marketing
+    default_scopes:
+        - https://ads.microsoft.com/msads.manage
+        - offline_access
+    proxy:
+        base_url: https://clientcenter.api.bingads.microsoft.com/Api
+    refresh_params:
+        grant_type: refresh_token
+        scope: https://ads.microsoft.com/msads.manage
+    docs: https://docs.nango.dev/integrations/all/microsoft-ads
 mixpanel:
     categories:
         - analytics
