--- a/.env.example
+++ b/.env.example
@@ -71,6 +71,7 @@ DEFAULT_GITHUB_CLIENT_ID=
 DEFAULT_GITHUB_CLIENT_SECRET=
 
 # ----- Logs
+NANGO_LOGS_ENABLED="false"
 NANGO_LOGS_OS_URL="http://localhost:9500"
 NANGO_LOGS_OS_USER=""
 NANGO_LOGS_OS_PWD=""
