--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
         "eslint-plugin-prettier": "5.1.3",
         "eslint-plugin-react": "7.33.2",
         "eslint-plugin-react-hooks": "4.6.0",
+        "git-cliff": "2.2.1",
         "husky": "^8.0.3",
         "js-yaml": "4.1.0",
         "lint-staged": "15.2.2",
