--- a/cliff.toml
+++ b/cliff.toml
@@ -5,10 +5,7 @@
 # changelog header
 header = """
 # Changelog\n
-All notable changes to this project will be documented in this file.
-
-The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
-and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).\n
+All notable changes to this project will be documented in this file.\n
 """
 # template for the changelog body
 # https://keats.github.io/tera/docs/#introduction
@@ -21,7 +18,8 @@ body = """
 {% for group, commits in commits | group_by(attribute="group") %}
     ### {{ group | upper_first }}
     {% for commit in commits %}
-        - {{ commit.message | upper_first }}\
+        - {% if commit.scope %}*({{ commit.scope }})* {% endif %}\
+           {{ commit.message | upper_first }}\
     {% endfor %}
 {% endfor %}\n
 """
