--- a/package.json
+++ b/package.json
@@ -78,7 +78,8 @@
         "testcontainers": "^9.12.0",
         "tsx": "^4.6.2",
         "typescript": "^5.3.3",
-        "vitest": "0.33.0"
+        "vitest": "0.33.0",
+        "zx": "8.0.2"
     },
     "lint-staged": {
         "*.{js,jsx,ts,tsx,ejs,cjs}": [
