--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -29,6 +29,9 @@
             "path": "packages/runner"
         },
         {
+            "path": "packages/scheduler"
+        },
+        {
             "path": "packages/server"
         },
         {
