--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -39,6 +39,7 @@
         "@radix-ui/react-icons": "1.3.0",
         "@sentry/react": "7.83.0",
         "@tailwindcss/forms": "0.5.3",
+        "@tanstack/react-table": "8.16.0",
         "@testing-library/react": "13.4.0",
         "@testing-library/user-event": "13.5.0",
         "@types/lodash": "4.17.0",
