--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -31,12 +31,15 @@
         "@geist-ui/core": "2.3.8",
         "@geist-ui/icons": "1.0.2",
         "@heroicons/react": "2.0.18",
-        "@mantine/core": "6.0.11",
+        "@mantine/core": "7.9.0",
         "@mantine/prism": "5.10.5",
         "@nangohq/frontend": "^0.39.23",
         "@nangohq/server": "file:../server",
         "@nangohq/types": "^0.39.23",
+        "@radix-ui/react-dialog": "1.0.5",
+        "@radix-ui/react-dropdown-menu": "2.0.6",
         "@radix-ui/react-icons": "1.3.0",
+        "@radix-ui/react-popover": "1.0.7",
         "@sentry/react": "7.83.0",
         "@tailwindcss/forms": "0.5.3",
         "@tanstack/react-table": "8.16.0",
@@ -50,6 +53,7 @@
         "class-variance-authority": "0.5.2",
         "classnames": "2.3.2",
         "clsx": "2.1.0",
+        "cmdk": "1.0.0",
         "cron-parser": "4.8.1",
         "env-cmd": "10.1.0",
         "lodash": "4.17.21",
