--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -2296,6 +2296,21 @@ wave-accounting:
     proxy:
         base_url: https://gql.waveapps.com
     docs: https://docs.nango.dev/integrations/all/wave-accounting
+wealthbox:
+    categories:
+        - crm
+    auth_mode: OAUTH2
+    authorization_url: https://app.crmworkspace.com/oauth/authorize
+    token_url: https://app.crmworkspace.com/oauth/token
+    authorization_params:
+        response_type: code
+    token_params:
+        grant_type: authorization_code
+    refresh_params:
+        grant_type: refresh_token
+    proxy:
+        base_url: https://api.crmworkspace.com
+    docs: https://docs.nango.dev/integrations/all/wealthbox
 whoop:
     categories:
         - sports
