--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -2122,8 +2122,10 @@ teamwork:
     auth_mode: OAUTH2
     authorization_url: https://www.teamwork.com/launchpad/login
     token_url: https://www.teamwork.com/launchpad/v1/token.json
+    token_response_metadata:
+        - installation.apiEndPoint
     proxy:
-        base_url: https://${connectionConfig.subdomain}${connectionConfig.extension}.teamwork.com
+        base_url: ${connectionConfig.installation.apiEndPoint}
     docs: https://docs.nango.dev/integrations/all/teamwork
 tiktok-accounts:
     categories:
