feat(db): add ability to change schema name

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,7 @@
 # NANGO_DB_HOST=<PICK-A-HOST>
 # NANGO_DB_PORT=<PICK-A-PORT>
 # NANGO_DB_NAME=<PICK-A-DB-NAME>
+# NANGO_DB_SCHEMA=<PICK-A-SCHEMA-NAME>
 # NANGO_DB_SSL=<PICK-TRUE-OR-FALSE>
 # Override these 2 variables to configure the database connection pool / tune it for your needs i.e. serverless databases.
 # NANGO_DB_POOL_MIN=<PICK-INT-OR-SKIP>
@@ -82,9 +83,6 @@ WORKOS_CLIENT_ID=
 
 # Google Cloud Configuration
 GOOGLE_APPLICATION_CREDENTIALS=
-
-# Enable or disable environment keys cache
-NANGO_CACHE_ENV_KEYS=
 
 # Key to send email
 MAILGUN_API_KEY=
