feat(integration): add Bland.ai (#2098)
## Describe your changes
Need this for a beta release of respell. Docs are here: docs.bland.ai

---------

Co-authored-by: Samuel Bodin <1637651+bodinsamuel@users.noreply.github.com>

--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -61,6 +61,15 @@ airtable:
     proxy:
         base_url: https://api.airtable.com
     docs: https://docs.nango.dev/integrations/all/airtable
+blandai:
+    categories:
+        - support
+    auth_mode: API_KEY
+    proxy:
+        base_url: https://api.bland.ai
+        headers:
+            Authorization: ${apiKey}
+    docs: https://docs.nango.dev/integrations/all/blandai
 algolia:
     categories:
         - search
