allow schema change for records

--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,11 @@
 # NANGO_DB_POOL_MIN=<PICK-INT-OR-SKIP>
 # NANGO_DB_POOL_MAX=<PICK-INT-OR-SKIP>
 #
+# - If empty, default to the main database URL
+# RECORDS_DATABASE_URL=
+# - If empty, default to nango_records
+# RECORDS_DATABASE_SCHEMA=
+#
 #
 # - Configure server and worker port (current value is the default for running Nango locally).
 #
