--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "@nangohq/nango",
     "type": "module",
+    "version": "0.39.23",
     "workspaces": [
         "packages/cli",
         "packages/shared",
@@ -69,6 +70,7 @@
         "eslint-plugin-prettier": "5.1.3",
         "eslint-plugin-react": "7.33.2",
         "eslint-plugin-react-hooks": "4.6.0",
+        "git-cliff": "2.2.1",
         "husky": "^8.0.3",
         "js-yaml": "4.1.0",
         "lint-staged": "15.2.2",
@@ -77,7 +79,8 @@
         "testcontainers": "^9.12.0",
         "tsx": "^4.6.2",
         "typescript": "^5.3.3",
-        "vitest": "0.33.0"
+        "vitest": "0.33.0",
+        "zx": "8.0.2"
     },
     "lint-staged": {
         "*.{js,jsx,ts,tsx,ejs,cjs}": [
