--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -39,6 +39,7 @@
         "@radix-ui/react-dialog": "1.0.5",
         "@radix-ui/react-dropdown-menu": "2.0.6",
         "@radix-ui/react-icons": "1.3.0",
+        "@radix-ui/react-label": "2.0.2",
         "@radix-ui/react-popover": "1.0.7",
         "@sentry/react": "7.83.0",
         "@tailwindcss/forms": "0.5.3",
@@ -73,6 +74,7 @@
         "tailwind-merge": "2.2.1",
         "tailwindcss": "3.2.7",
         "typescript": "4.9.5",
+        "vaul": "0.9.1",
         "web-vitals": "2.1.4",
         "webpack": "5.90.3",
         "zustand": "4.3.9"
