--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -24,12 +24,12 @@ jobs:
                   node-version-file: '.nvmrc'
                   registry-url: 'https://registry.npmjs.org'
 
-            - name: Publish npm packages
-              env:
-                  NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-              shell: bash
-              run: |
-                  bash ./scripts/publish.sh ${{ inputs.version }}
+            # - name: Publish npm packages
+            #   env:
+            #       NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+            #   shell: bash
+            #   run: |
+            #       bash ./scripts/publish.sh ${{ inputs.version }}
 
             - name: Publish release
               env:
