--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -33,4 +33,4 @@ jobs:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               run: |
                   npm ci
-                  npx zx ./scripts/gitrelease.mjs ${{ inputs.version }} ${{ github.head_ref || github.ref_name }}
+                  npx zx ./scripts/gitrelease.mjs "${{ inputs.version }}" "${{ github.head_ref || github.ref_name }}"
